--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,4 +2,7 @@ const path = require("path");
 
 module.exports = {
   config: path.resolve("config", "database.js"),
+  "models-path": path.resolve("app", "models"),
+  "migrations-path": path.resolve("app", "migrations"),
+  "seeders-path": path.resolve("app", "seeders"),
 };
