--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "db-migrate": "sequelize db:migrate",
     "db-undo-migrate": "sequelize db:migrate:undo:all",
     "db-seed": "sequelize db:seed:all",
-    "db-undo-seed": "sequelize db:seed:undo:all"
+    "db-undo-seed": "sequelize db:seed:undo:all",
+    "lint": "npx eslint .",
+    "fixlint": "npx eslint . --fix"
   },
   "author": "",
   "license": "ISC",
@@ -22,5 +24,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "globals": "^15.11.0"
   }
 }
